<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"/>

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard" />

    <Button
        android:id="@+id/buttonExpert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expert" />

</LinearLayout>